added assets folder, added navbar, added banner section and card section

--- a/index.html
+++ b/index.html
@@ -21,5 +21,384 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <header class="shadow py-3 px-4">
+      <div class="flex justify-between items-center w-11/12 mx-auto">
+        <!-- Left side (logo) -->
+        <div class="flex items-center gap-2">
+          <img src="./assets/logo.png" alt="Logo" class="w-12" />
+          <h2 class="text-[#006747] font-bold leading-5">
+            Emergency <br />
+            Service
+          </h2>
+        </div>
+
+        <!-- Right side (3 items) -->
+        <div class="flex items-center gap-3">
+          <div
+            class="bg-[#41ff6b1a] flex items-center gap-2 w-24 h-12 rounded-full justify-center"
+          >
+            <p class="font-bold">0</p>
+            <img src="./assets/heart.png" alt="Heart" class="w-8" />
+          </div>
+
+          <div
+            class="bg-[#41ff6b1a] flex items-center gap-2 w-24 h-12 rounded-full justify-center"
+          >
+            <p class="font-bold">100</p>
+            <img src="./assets/coin.png" alt="Coin" class="w-8" />
+          </div>
+
+          <button
+            class="w-28 h-12 rounded-full bg-[#00a63e] text-white font-medium"
+          >
+            2 Copy
+          </button>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- Banner Section -->
+      <section>
+        <div>
+          <div
+            class="h-40 w-full bg-[linear-gradient(90deg,rgba(1,49,35,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)] flex flex-col justify-center items-center text-center"
+          >
+            <img src="./assets/logo-dark.png" alt="" class="w-16" />
+            <h1 class="text-white font-bold text-2xl lg:mt-2">
+              Emergency Service Directory
+            </h1>
+            <p class="text-white mt-2">
+              Government Emergency Services at Your Fingertip – A Project by
+              Government of the People’s Republic of Bangladesh
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Card section -->
+      <section class="bg-[#f5fff6]">
+        <section class="container w-11/12 mx-auto pt-6">
+          <section class="card-left grid grid-cols-3 gap-3">
+            <!-- card-1 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 2 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 3 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 4 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 5 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 6 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 7 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 8 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <!-- 9 -->
+
+            <div class="card w-72 bg-base-100 card-xl shadow-sm">
+              <div class="flex justify-between items-center w-11/12 mx-auto">
+                <img
+                  src="./assets/emergency.png"
+                  alt=""
+                  class="bg-[#ffe3e2] w-14 p-3 rounded-xl mt-7"
+                />
+                <i class="fa-solid fa-heart"></i>
+              </div>
+              <div class="w-11/12 mx-auto mt-3">
+                <h1 class="font-bold text-2xl">N</h1>
+                <h2>N</h2>
+                <h1 class="font-bold text-2xl mt-4">9</h1>
+                <p
+                  class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center"
+                >
+                  A
+                </p>
+                <div class="flex gap-2 mt-5 mb-6">
+                  <button class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl">
+                    <i class="fa-solid fa-copy"></i>
+                    Copy
+                  </button>
+                  <button
+                    class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                  >
+                    <i class="fa-solid fa-phone"></i>
+                    Call
+                  </button>
+                </div>
+              </div>
+            </div>
+            
+          </section>
+          <aside class="card-right"></aside>
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
