Work at heart-icons count,calling button section and clearhistory with js

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
           <div
             class="bg-[#41ff6b1a] flex items-center gap-2 w-24 h-12 rounded-full justify-center"
           >
-            <p class="font-bold">0</p>
+            <p id="heart" class="font-bold">0</p>
             <img src="./assets/heart.png" alt="Heart" class="w-8" />
           </div>
 
           <div
             class="bg-[#41ff6b1a] flex items-center gap-2 w-24 h-12 rounded-full justify-center"
           >
-            <p class="font-bold">100</p>
+            <p id="coin-count" class="font-bold">100</p>
             <img src="./assets/coin.png" alt="Coin" class="w-8" />
           </div>
 
@@ -96,12 +96,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">National Emergency Number</h1>
                   <p class="text-sm text-gray-500">National Emergency</p>
-                  <p class="font-bold text-2xl mt-4">999</p>
+                  <p class="service-number font-bold text-2xl mt-4">999</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -115,7 +115,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -133,12 +133,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Police Helpline Number</h1>
                   <p class="text-sm text-gray-500">Police</p>
-                  <p class="font-bold text-2xl mt-4">999</p>
+                  <p class="service-number font-bold text-2xl mt-4">999</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -152,7 +152,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -170,12 +170,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Fire Survice Number</h1>
                   <p class="text-sm text-gray-500">Fire Service</p>
-                  <p class="font-bold text-2xl mt-4">999</p>
+                  <p class="service-number font-bold text-2xl mt-4">999</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -189,7 +189,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -207,12 +207,14 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Ambulance Service</h1>
                   <p class="text-sm text-gray-500">Ambulance</p>
-                  <p class="font-bold text-2xl mt-4">199-999999</p>
+                  <p class="service-number font-bold text-2xl mt-4">
+                    199-999999
+                  </p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -226,7 +228,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -244,12 +246,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Women & Child Helpline</h1>
                   <p class="text-sm text-gray-500">Women & Child Helpline</p>
-                  <p class="font-bold text-2xl mt-4">109</p>
+                  <p class="service-number font-bold text-2xl mt-4">109</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -263,7 +265,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -281,12 +283,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Anti-Corruption Helpline</h1>
                   <p class="text-sm text-gray-500">Anti-Corruption</p>
-                  <p class="font-bold text-2xl mt-4">106</p>
+                  <p class="service-number font-bold text-2xl mt-4">106</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -300,7 +302,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -318,12 +320,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Electricity Helpline</h1>
                   <p class="text-sm text-gray-500">Electricity Outage</p>
-                  <p class="font-bold text-2xl mt-4">16216</p>
+                  <p class="service-number font-bold text-2xl mt-4">16216</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-20 h-7 rounded-2xl text-center mt-1"
                   >
@@ -337,7 +339,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -355,12 +357,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Brac Helpline</h1>
                   <p class="text-sm text-gray-500">Brac</p>
-                  <p class="font-bold text-2xl mt-4">16445</p>
+                  <p class="service-number font-bold text-2xl mt-4">16445</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -374,7 +376,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -392,12 +394,12 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Bangladesh Railway Helpline</h1>
                   <p class="text-sm text-gray-500">Bangladesh Railway</p>
-                  <p class="font-bold text-2xl mt-4">163</p>
+                  <p class="service-number font-bold text-2xl mt-4">163</p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
                   >
@@ -411,7 +413,7 @@
                       Copy
                     </button>
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
+                      class="call-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl bg-[#00a63e] text-white"
                     >
                       <i class="fa-solid fa-phone"></i>
                       Call
@@ -439,17 +441,21 @@
                 Clear
               </button>
             </div>
+
             <!-- Information div -->
-            <div class="bg-[#fafafa] w-11/12 mx-auto p-3 rounded-lg mt-4">
+            <div id="call-history"></div>
+            <!-- <div class="bg-[#fafafa] w-11/12 mx-auto p-3 rounded-lg mt-4">
               <h1 class="font-bold">Fire Service Number</h1>
               <p class="text-gray-500">999</p>
               <div class="flex justify-end">
                 <p class="mt-[-35px]">11:36:58 AM</p>
               </div>
-            </div>
+            </div> -->
           </aside>
         </section>
       </section>
     </main>
+    <!-- Js -->
+    <script src="./script.js"></script>
   </body>
 </html>
