Added navbar copy count element

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           </div>
 
           <p
-            class="w-28 h-12 rounded-full bg-[#00a63e] text-white font-medium flex items-center justify-center"
+            class="w-28 h-12 rounded-full bg-[#00a63e] text-white font-medium flex items-center justify-center gap-1"
           >
-            2 Copy
+            <span id="copy-count"> 0 </span> Copy
           </p>
         </div>
       </div>
@@ -109,7 +109,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -146,7 +146,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -183,7 +183,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -222,7 +222,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -259,7 +259,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -296,7 +296,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -333,7 +333,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -370,7 +370,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
@@ -407,7 +407,7 @@
                   </p>
                   <div class="flex gap-2 mt-5 mb-6">
                     <button
-                      class="w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
+                      class="copy-btn w-40 h-10 border-2 rounded-l-xl rounded-r-xl"
                     >
                       <i class="fa-regular fa-copy"></i>
                       Copy
