--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">National Emergency Number</h1>
@@ -133,7 +133,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Police Helpline Number</h1>
@@ -170,7 +170,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Fire Survice Number</h1>
@@ -207,13 +207,13 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Ambulance Service</h1>
                   <p class="text-sm text-gray-500">Ambulance</p>
                   <p class="service-number font-bold text-2xl mt-4">
-                    199-999999
+                    1994-999999
                   </p>
                   <p
                     class="text-gray-500 bg-[#f2f2f2] w-14 h-7 rounded-2xl text-center mt-1"
@@ -246,7 +246,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Women & Child Helpline</h1>
@@ -283,7 +283,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Anti-Corruption Helpline</h1>
@@ -320,7 +320,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Electricity Helpline</h1>
@@ -357,7 +357,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Brac Helpline</h1>
@@ -394,7 +394,7 @@
                     alt=""
                     class="bg-[#ffe3e2] w-11 p-3 rounded-xl"
                   />
-                  <i class="heart-icon fa-regular fa-heart"></i>
+                  <i class="heart-icon fa-regular fa-heart cursor-pointer"></i>
                 </div>
                 <div class="w-11/12 mx-auto mt-3">
                   <h1 class="font-bold text-lg">Bangladesh Railway Helpline</h1>
